# PlexUtils

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  example-config.yaml  pyproject.toml
.github/workflows/: pylint.yml  release.yml  unittests.yml
docs/source/: conf.py  index.rst  modules.rst  plexutils.api.rst  plexutils.config.rst  plexutils.console.rst  plexutils.crawler.rst  plexutils.media.rst  plexutils.rst  plexutils.shared.rst  plexutils.utils.rst
locale/de/LC_MESSAGES/: plexutils.po
locale/de_AT/LC_MESSAGES/: plexutils.po
locale/de_DE/LC_MESSAGES/: plexutils.po
plexutils/: __main__.py  main.py
plexutils/api/: tvdb_api.py
plexutils/config/: config.py  plex_library_infos.py  tvdb_credentials.py
plexutils/console/: menu.py  settings_menu.py
plexutils/crawler/: plex_movie_crawler.py  plex_tvshow_crawler.py
plexutils/media/: movie.py  movie_list.py  tvshow.py  tvshow_episode.py  tvshow_list.py  tvshow_season.py  video_file.py
plexutils/pipelines/: movies.parquet  scan_movie_library_pipeline.py
plexutils/shared/: config_tools.py  console_menu.py  date_tools.py  media_tools.py  menu.py  menu_tools.py  plex_movie_crawler.py  plex_tvshow_crawler.py  tvdb_tool.py  utils.py
plexutils/utils/: movie_file_utils.py  plex_utils.py  tvdb_utils.py  tvshow_file_utils.py
scripts/: changelog.py  compile_messages.py  generate_authors_md.py  generate_docs.py  generate_movie_files.py  generate_movie_test_data.py  generate_test_config_files.py  generate_test_data.py  generate_tvshow_files.py  generate_tvshow_test_data.py  lint.py  test_coverage.py  tests.py
scripts/data/: movie_files.json  tvshow_files.json
scripts/data/config/: test_config_01.yaml  test_config_02.yaml
scripts/data/movies/: anime_movie_files.json
scripts/data/tvshows/: anime_tvshow_files.json  tvshow_files.json
src/: main.py
src/media/: movie.py  tvshow.py  tvshow_episode.py  tvshow_list.py  tvshow_season.py
src/shared/: menu.py  plex_movie_crawler.py  plex_tvshow_crawler.py  tvdb_tool.py  tvshow.py  tvshow_episode.py  tvshow_season.py  utils.py
src/utils/: movie_file_utils.py  plex_utils.py  tvdb_utils.py  tvshow_file_utils.py
tests/: setup_testdata.py  test_data.py  test_menu.py  testdata.py
tests/api/: test_tvdb_api.py
tests/config/: test_config.py  test_plex_library_infos.py  test_tvdb_credentials.py
tests/crawler/: test_plex_movie_crawler.py  test_plex_tvshow_crawler.py
tests/media/: test_movie.py  test_movie_list.py  test_tvshow.py  test_tvshow_episode.py  test_tvshow_list.py  test_tvshow_season.py
tests/shared/: test_config_tools.py  test_date_tools.py  test_media.py  test_media_tools.py  test_menu.py  test_menu_tools.py  test_plex_movie_crawler.py  test_plex_tvshow_crawler.py  test_tvdb_tool.py  test_tvshow.py  test_tvshow_episode.py  test_tvshow_season.py  test_utils.py
