[tool.poetry]
name = "plexutils"
version = "1.0.0"
description = "tools for plex admins"
authors = ["Felix Rizzolli <felix.rizzolli@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tvdb-v4-official = "^1.1.0"
pyyaml = "^6.0.1"
pylint = "^3.1.0"

[tool.poetry.scripts]
compile-messages = "scripts.compile_messages:compile_messages"
generate-test-data = "scripts.generate_test_data:generate_test_data"
test-coverage = "scripts.test_coverage:test_coverage"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
